bin/testsuite/tests/compiler/src/errors/compiler245.swg
#global testerror "Err0410"

using Swag

func main(a: s32 = 6, b: bool) {}
